# logmat

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  README.md.backup  config.h.in  config.json  main.cpp  setup-env.sh  setup.sh  setup.sh~
cmake/: main_symlink_create.cmake  views_add.cmake
controllers/: API_WebSocet_WebHook.cc  API_WebSocet_WebHook.h  Article.cpp  Article.h  Auth.cpp  Auth.h  Director.cpp  Director.h  File.cpp  File.h  Image.cpp  Image.h  LogRequest.cpp  LogRequest.h  Permission.cpp  Permission.h  Role.cpp  Role.h  Test.cpp  Test.h  User.cpp  User.h  Webhook.cpp  Webhook.h  log.cpp  log.h
filters/: Filter_Login.cpp  Filter_Login.h
migrations/: 00_Captcha.sql  00_File.sql  00_User.sql  01_Article.sql  01_ChangeLog.sql  01_LogRequest.sql  01_Permission.sql  01_Role.sql  01_Token.sql  02_RoleAndPermission.sql  02_UserAndRole.sql
modules/: DTO.hpp  DTO_declaration.hpp  DataBase.hpp  SQL_template.h  database.cpp  database.h  field_reflection.hpp  loginrequest.cpp  loginrequest.h  math.hpp  registerrequest.cpp  registerrequest.h  struct_declaration.hpp  utils.cpp
modules/Migration/: Captcha.hpp  ChangeLog.hpp  File.hpp  Image.hpp  Permission.hpp  Review.hpp  Role.hpp  RoleAndPermission.hpp  Token.hpp  User.hpp  UserAndRole.hpp
modules/Request/: hookgit.hpp  log.hpp  login.hpp  register.hpp
modules/System/: DTO.hpp  database.hpp  math.hpp  sql_template.h  utils.cpp  utils.h
plugins/: DataBase_Migration.cpp  DataBase_Migration.h  DataBase_Seeder.cpp  DataBase_Seeder.h
root/: 2FA.html  _2FA.html  _article.html  _articleConstructor.html  _gallery.html  _index.html  _index_old.html  _temp.html  _uploadfile.html  _userTemp.html  aboutUs.html  aboutus.html  admin.html  articleConstructor.html  catalog.html  contacts.html  gallery.html  index.html  index_old.html  login.html  login2fa.html  main.html  me.html  menuStyles.css  notfound.html  register.html  reviews.html  style.css  temp.html  test.html  uploadfile.html  userTemp.html
root/css/: admin.css  menuStyles.css  styles.css  styles_old.css  tables.css  tech.css  userMenu.css  userProfile.css
root/js/: admin.js  asidepanel.js  catalog.js  color.js  editor.js  gallery.js  login.js  mainpage.js  reg.js  register.js  temp.js  userinfo.js  userpanel.js  webhook.js
root/pages/: aboutUs.html  admin.html  main.html  temp.html  userTemp.html
root/siteALGOS/beta/: 2FA.html  alpha.rar  main.html  menuStyles.css  styles.css  temp.html
root/siteALGOS/pages/: main.html  styles.css
seeders/: 00_User.sql  01_Permission_File.sql  01_Permission_Permission.sql  01_Permission_Role.sql  01_Permission_User.sql  01_Role.sql  02_RoleAndPermission_Admin.sql  02_RoleAndPermission_Guest.sql  02_RoleAndPermission_User.sql  02_UserAndRole.sql
test/: CMakeLists.txt
views/: .gitignore  article.html  article_editor.html  gallery.html  index.html  info.html  notfound.html  reviews.html  signin.html  signup.html  temp.html  temp_old.html
